Fix paths and layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -117,6 +117,7 @@ header .menu-icon {
   background-clip: text;
   -webkit-text-fill-color: transparent; /* Makes the text gradient */
   text-align: center;
+  bottom: 20%;
 }
 
 .hero-content p {
